@startuml
class Formatter {
    - iterator: PrintScriptIterator
    + format(rules: List<Rule>): FormatResult
}

class FormatterVisitor {
    visit(node: ASTNode): VisitorResult
}

class RulesFactory {
    + createRules(config: JsonObject, version: String): List<Rule>
}

interface Rule {
    + applyRule(input: String): String
}

interface RuleBuilder {
    + buildRule(ruleName: String, value: String): Rule
}

Formatter --> FormatterVisitor : uses
RulesFactory --> Formatter : creates rules
RulesFactory --> RuleBuilder : has builders
RuleBuilder --> Rule : builds
FormatterVisitor --> Formatter: constructs strings
Formatter --> Rule : applies rules

@enduml
